<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adcu_gnss_rtk_sdk_drive</name>
  <version>1.0.0</version>
  <description>ADCU GNSS RTK SDK Driver for NVIDIA Orin platform</description>
  <maintainer email="teddy@pixmoving.net">Teddy</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libgps-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>